; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_middleware.c_detach_receiver.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_middleware.c_detach_receiver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_mruby_subreq_t = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.st_mruby_subreq_t*)* @detach_receiver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @detach_receiver(%struct.st_mruby_subreq_t* %0) #0 {
  %2 = alloca %struct.st_mruby_subreq_t*, align 8
  %3 = alloca i32, align 4
  store %struct.st_mruby_subreq_t* %0, %struct.st_mruby_subreq_t** %2, align 8
  %4 = load %struct.st_mruby_subreq_t*, %struct.st_mruby_subreq_t** %2, align 8
  %5 = getelementptr inbounds %struct.st_mruby_subreq_t, %struct.st_mruby_subreq_t* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 8
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @mrb_nil_p(i32 %7)
  %9 = icmp ne i32 %8, 0
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = call i32 (...) @mrb_nil_value()
  %14 = load %struct.st_mruby_subreq_t*, %struct.st_mruby_subreq_t** %2, align 8
  %15 = getelementptr inbounds %struct.st_mruby_subreq_t, %struct.st_mruby_subreq_t* %14, i32 0, i32 1
  store i32 %13, i32* %15, align 8
  %16 = load %struct.st_mruby_subreq_t*, %struct.st_mruby_subreq_t** %2, align 8
  %17 = getelementptr inbounds %struct.st_mruby_subreq_t, %struct.st_mruby_subreq_t* %16, i32 0, i32 0
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %3, align 4
  %24 = call i32 @mrb_gc_unregister(i32 %22, i32 %23)
  %25 = load %struct.st_mruby_subreq_t*, %struct.st_mruby_subreq_t** %2, align 8
  %26 = getelementptr inbounds %struct.st_mruby_subreq_t, %struct.st_mruby_subreq_t* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %3, align 4
  %33 = call i32 @mrb_gc_protect(i32 %31, i32 %32)
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @mrb_nil_p(i32) #1

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i32 @mrb_gc_unregister(i32, i32) #1

declare dso_local i32 @mrb_gc_protect(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
